--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
             <img src="Images/img-DS.png" alt="logo" />
             <a href="#home">BAUCHA'S SHOES</a>
           </li>
+          
           <li class="secondary-nav">
             <a href="HTML/checkout.html">
               <i class="fas fa-shopping-cart"></i> CART
             </a>
+          </li>
+          <li class="secondary-nav">
+            <a href="HTML/login.html">LOGIN</a>
           </li>
           <li class="secondary-nav">
             <a href="./HTML/features.html">DESIGN SUMMARY</a>
@@ -44,7 +48,7 @@
           <li class="secondary-nav"><a href="HTML/women.html">WOMEN</a></li>
           <li class="secondary-nav"><a href="HTML/men.html">MEN</a></li>
           <li class="secondary-nav">
-            <a href="HTML/about-us.html">ABOUT DOWNY</a>
+            <a href="HTML/about-us.html">ABOUT US</a>
           </li>
         </ul>
       </nav>
