--- a/index.html
+++ b/index.html
@@ -8,17 +8,10 @@
     <link rel="shortcut icon" type="image/x-icon" href="Images/img-DS.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/navbar.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" />
     <link rel="stylesheet" href="./css/preloader.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"/>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/preloader.js"></script>
   </head>
@@ -150,7 +143,7 @@
         <div class="col">
           <h1>Baucha's Shoes</h1>
           <p>
-            Official <a href="https://www.nike.com/xf/en_gb/">Nike</a> Partner
+            Official <a href="https://www.nike.com/">Nike</a> Partner
           </p>
         </div>
         <div class="col">
